files/test-ingress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: harbor.xmtss.local:16443/baseimg/nginx:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: harbor-xmtss

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-app
  name: nginx-cp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx-ing
  #annotations:
  #  kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            #name: nginx-web-svc
            name: nginx-cp
            port:
              number: 80
